; ModuleID = '/home/carl/AnghaBench/zfs/cmd/ztest/extr_ztest.c_ztest_random_spa_version.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/ztest/extr_ztest.c_ztest_random_spa_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SPA_VERSION_BEFORE_FEATURES = common dso_local global i64 0, align 8
@SPA_VERSION_FEATURES = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @ztest_random_spa_version to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ztest_random_spa_version(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  store i64 %4, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = load i64, i64* @SPA_VERSION_BEFORE_FEATURES, align 8
  %7 = icmp sle i64 %5, %6
  br i1 %7, label %8, label %16

8:                                                ; preds = %1
  %9 = load i64, i64* %3, align 8
  %10 = load i64, i64* @SPA_VERSION_BEFORE_FEATURES, align 8
  %11 = load i64, i64* %3, align 8
  %12 = sub nsw i64 %10, %11
  %13 = add nsw i64 %12, 1
  %14 = call i64 @ztest_random(i64 %13)
  %15 = add nsw i64 %9, %14
  store i64 %15, i64* %3, align 8
  br label %16

16:                                               ; preds = %8, %1
  %17 = load i64, i64* %3, align 8
  %18 = load i64, i64* @SPA_VERSION_BEFORE_FEATURES, align 8
  %19 = icmp sgt i64 %17, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %16
  %21 = load i64, i64* @SPA_VERSION_FEATURES, align 8
  store i64 %21, i64* %3, align 8
  br label %22

22:                                               ; preds = %20, %16
  %23 = load i64, i64* %3, align 8
  %24 = call i32 @SPA_VERSION_IS_SUPPORTED(i64 %23)
  %25 = call i32 @ASSERT(i32 %24)
  %26 = load i64, i64* %3, align 8
  ret i64 %26
}

declare dso_local i64 @ztest_random(i64) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @SPA_VERSION_IS_SUPPORTED(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
